--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li class="nav-item">
                     <a class="nav-link link text-white display-5" href="https://mobirise.com">
                         </a>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-5" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn"></span>Частным лицам &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-5" href="https://mobirise.com">New Item</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-5" href="https://mobirise.com" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mobi-mbri mobi-mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Бизнесу &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-5" href="https://mobirise.com" aria-expanded="false">New Item</a></div></li><li class="nav-item"><a class="nav-link link text-white display-5" href="https://mobirise.com" aria-expanded="false"><span class="mobi-mbri mobi-mbri-italic mbr-iconfont mbr-iconfont-btn"></span>О нас &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-5" href="https://mobirise.com" aria-expanded="false"><font face="MobiriseIcons"><br></font> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-5" href="https://mobirise.com" aria-expanded="false"><font face="MobiriseIcons"></font></a><font face="MobiriseIcons"><a class="nav-link link text-white display-5" href="https://mobirise.com" aria-expanded="false" style="display: inline !important;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><br></font></li></ul>
+                </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-5" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn"></span>Частным лицам &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-5" href="https://mobirise.com">Кредиты<br></a><a class="text-white dropdown-item display-5" href="https://mobirise.com">Рефинансирование</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-5" href="https://mobirise.com" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mobi-mbri mobi-mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Бизнесу &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-5" href="https://mobirise.com" aria-expanded="false">New Item</a></div></li><li class="nav-item"><a class="nav-link link text-white display-5" href="https://mobirise.com" aria-expanded="false"><span class="mobi-mbri mobi-mbri-italic mbr-iconfont mbr-iconfont-btn"></span>О нас &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-5" href="https://mobirise.com" aria-expanded="false"><font face="MobiriseIcons"><br></font> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-5" href="https://mobirise.com" aria-expanded="false"><font face="MobiriseIcons"></font></a><font face="MobiriseIcons"><a class="nav-link link text-white display-5" href="https://mobirise.com" aria-expanded="false" style="display: inline !important;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><br></font></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
                     
                     Заказать зонок</a></div>
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -78,10 +78,9 @@
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"><br>Наша основная деятельность направлена на предоставление широкой линейки кредитных &nbsp;продуктов для 
 <br>физических и юридических лиц на лучших &nbsp;условиях.
 <br>
-<br>Сотрудничаем с самыми крупными и надежными финансовыми организациями РФ, что 
-<br>позволяет добиться желаемого результата для заказчика.
+<br>Сотрудничество с самыми крупными и надежными финансовыми организациями РФ,&nbsp;<br>позволяет нам добиться наилучшего результата для наших клиентов.
 <br>
-<br>Заключив договор и начав сотрудничество с нашей компанией, Вы можете быть уверены в том,
+<br>Заключив договор и начав сотрудничество с нашей компанией, вы можете быть уверены в том,
 <br>что будут использованы все возможные ресурсы для получения положительного результата.</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://mobirise.com">Отправить заявку</a></div>
             </div>
